# Sketchable

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  PyDraw.pyproj  PyDraw.slnx  README.md  Relish.pyproj  Relish.slnx  requirements.txt  setup.cfg  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  critical-bug-report.md  documentation-enhancament.md  enhancament.md  fix.md  important-message.md  licence-violation.md  question.md
.github/workflows/: main.yml
Core/: __init__.py  pypen.py  shapes.py
pydraw/: __init__.py  helmet.py  keyboardio.py  motion.py  ppn.py  shapes.py  ticky.py
pydraw_turtle.egg-info/: PKG-INFO  SOURCES.txt
pypen.egg-info/: PKG-INFO  SOURCES.txt
pypen_turtle.egg-info/: PKG-INFO  SOURCES.txt
sketchable/: __init__.py  externals.py  motion.py  ppn.py  shapes.py  sound.py
