[metadata]
name = pydraw-turtle
version = 1.3.3
author = robert19066_alt
description = An (easy) graphical library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robert19066/PyDraw
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    simpleaudio>=1.0.4
    pynput>=1.8.2