[metadata]
name = pydraw-turtle
version = 1.3.8
author = robert19066_alt
description = An (easy) graphical library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robert19066/PyDraw
license = PMIT

[options]
packages = find:
python_requires = <=3.12
install_requires =
    pydub==0.25.1
    simpleaudio==1.0.4
    keyboard==0.13.5
    mouse==0.7.1
